--- a/prakash.html
+++ b/prakash.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="x-icon" href="logo.png">
+    <link rel="shortcut icon" type="x-icon" href="Screenshot_2024-10-05_151951-removebg-preview.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prakash Portfolio</title>
     <link rel="stylesheet" href="prakash.css">
@@ -11,7 +11,7 @@
     <div>
         <div class="nav">
             <div class="logo">
-                <h1>LOGO</h1>
+                <img src="Screenshot_2024-10-05_135530-removebg-preview.png">
             </div>
             <ul>
                 <li><a href="#">Home</a></li>
